<resources>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="app_name">THE GAME</string>
    <string name="GAME">THE GAME</string>
    <string name="Login">Login</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Iniciar">Iniciar Sesión</string>
    <string name="Cuenta">¿Ya tienes cuenta?</string>
    <string name="Cuenta2">¿No tienes cuenta?</string>
    <string name="Olvide">¿Olvidaste tu contraseña?</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Crea">Crea tu Cuenta</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Telefono">Teléfono</string>
    <string name="Correo">Correo</string>
    <string name="Registrar">Registrar</string>
    <string name="Regresar">Regresar</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Bienvenido">Vamos a</string>
    <string name="Perfil">Perfil</string>
    <string name="Bienvenido2">aprender</string>
    <string name="Inicio">Pon a prueba tus habilidades</string>
    <string name="Inicio2">y diviertete mientras aprendes...</string>
    <string name="Aprender">¿Listo</string>
    <string name="Aprender2">para aprender?</string>
    <string name="Hola">¡Hola</string>
    <string name="Hola2">de nuevo!</string>
    <string name="Facebook">Facebook</string>
    <string name="Google">Google</string>
    <string name="Listo">Listo</string>
    <string-array name="sexo_options">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string name="view1">¡Bienvenido</string>
    <string name="view2">a GAME!</string>
    <string name="VamosA">
        Vamos a recuperar\n
        tu contraseña...</string>
    <string name="Escribircorreo">Escribe tu correo para restablecer tu contraseña:</string>
    <string name="Restablecer">Restablecer contraseña</string>

    <string name="frag2_titulo">
        Nuestro objetivo...
    </string>

    <string name="frag2_descrip">
        Queremos fomentar a los niños\n
        a desarrollar sus habilidades cognitivas\n
        y motoras, todo mientras se divierten
    </string>

    <string name="frag3_titulo">
        ¡Vamos\n
        a empezar!
    </string>

    <string name="registro_niños">
        ¿Deseas registrar\n
         otro niño?
    </string>

    <string name="frag3_descrp">
        Juega y aprende ahrora mismo...
    </string>

    <string name="descripciones">
        Un juego donde\n
        fomentamos el aprendizaje...
    </string>

    <string name="registro">Registro exitoso</string>

    <string name="gracias">
        Se te enviara un correo para\n
        activar tu cuenta, ¡Gracias por registrarte!
    </string>

    <string name="gracias1">
        Se te enviara un correo para\n
        restablecer tu contraseña, ¡Gracias!
    </string>

</resources>