<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <TextView
        android:id="@+id/bienvenido_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GAME"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bienvenido_text"
        android:layout_marginTop="90dp"/>

    <EditText
        android:id="@+id/usuario_edit_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/estilo_login"
        android:hint="@string/Usuario"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text" />


    <EditText
        android:id="@+id/contrasena_edit_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/estilo_login"
        android:hint="@string/Contraseña"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usuario_edit_text" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Iniciar"
        android:background="@drawable/boton_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasena_edit_text"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/no_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cuenta"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/registro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registrarse"
        android:textColor="@color/azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_text"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>