<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="15"
        android:scaleType="fitXY"
        android:src="@drawable/triangulo_verde"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <ImageView
        android:id="@+id/circulo_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="15"
        android:scaleType="fitXY"
        android:src="@drawable/circulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.29" />


    <ImageView
        android:id="@+id/zizag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/zigzag_salmon"
        app:layout_constraintBottom_toTopOf="@+id/inicio_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@+id/circulo_home"
        app:layout_constraintWidth_percent="0.4" />


    <TextView
        android:id="@+id/bienvenido_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/Bienvenido"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/bienvenido2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido2"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bienvenido_text"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/inicio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Inicio"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/bienvenido2_text"
        app:layout_constraintTop_toTopOf="@id/bienvenido2_text"
        android:layout_marginTop="65dp"/>

    <TextView
        android:id="@+id/inicio2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Inicio2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/inicio_text"
        app:layout_constraintTop_toTopOf="@id/inicio_text"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/iniciar_sesion_button"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:text="@string/Iniciar"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/Bink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/inicio2_text"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/registro_home_button"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:text="@string/Registrarse"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/Burple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iniciar_sesion_button"
        android:layout_marginTop="85dp"/>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/sikra_cuadrado"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registro_home_button"
        app:layout_constraintWidth_percent="1.1" />

</androidx.constraintlayout.widget.ConstraintLayout>