<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view">

    <ImageView
        android:id="@+id/imagen_view2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/trinagulo_salmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/circulo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="236dp"
        android:src="@drawable/circulo_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/circulo2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="504dp"
        android:src="@drawable/circulo_si"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/Burple"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/imagen_view2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/titulo2_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/Burple"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/titulo_view2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descripcion_view2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripciones"
        android:textSize="18sp"
        android:textColor="@color/Burple"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/titulo2_view2"
        app:layout_constraintStart_toStartOf="@id/titulo2_view2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
